test/soya/error/type/var.soy
function void main() {
  x = 0;
}
